# pose_designer

./: Cargo.toml  poses.json
src/: controls.rs  main.rs  poses.rs
