[package]
name = "pose_designer"
version = "0.1.0"
authors = ["freesig <tomrgowan@gmail.com>"]
edition = "2018"

[dependencies]
nuitrack-rs = { path = "../nuitrack-rs" }
nuitrack_pose_estimation = { path ="../nuitrack_pose_estimation" }
serde = "1"
serde_json = "1"
nannou = { path = "../nannou" }
vulkano = "0.11.1"
vulkano-shaders = { git = "https://github.com/mitchmindtree/vulkano", branch = "nannou_patches" }
termion = "1"
clap = "2"


[replace]
"vulkano:0.11.1" = { git = "https://github.com/mitchmindtree/vulkano", branch = "nannou_patches" }
